			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

28-Sep-2004
~~~~~~~~~~~
Minimum width of toolbar now an option (requested by Matthew Weier O'Phinney).

21-Sep-2004
~~~~~~~~~~~
Only examine items that are actually displayed, not all items in a directory.
Saves checking hidden files, which typically speeds up opening the home
directory. Removed an unnecessary extra scan when opening a directory
with the default filter setting. Removed the double scan when clicking Refresh
and two windows show the same directory (Thomas Leonard).

20-Sep-2004
~~~~~~~~~~~
Added option to make panels have the type _NET_WM_WINDOW_TYPE_DOCK (Tony
Houghton). Metacity needs this.

17-Sep-2004
~~~~~~~~~~~
If we can't guess a file's type from its name or extended attribute, try
looking at its contents too, if we have gnomevfs 2.8.0 or later available
(Thomas Leonard).

11-Sep-2004
~~~~~~~~~~~
Panel and pinboard icons can now have a single argument set for them.
If you need more than one argument, consider creating a wrapper
(Stephen Watson).

09-Sep-2004
~~~~~~~~~~~
Added --massif option for profiling memory usage (Thomas Leonard).
Warn about missing libsm in configure.in (reported by fedewico).

06-Sep-2004
~~~~~~~~~~~
When resizing a window, only warp the pointer as much as necessary to keep
it inside the window (Thomas Leonard).

02-Sep-2004
~~~~~~~~~~~
Ensure that a panel applet's properties are set before starting the applet
(reported by Tony Houghton).

01-Sep-2004
~~~~~~~~~~~
Fixed panel menu positioning for multiple monitors with different resolutions
(Tony Houghton).
Use _NET_WM_STATE_BELOW to raise and lower the panel (Tony Houghton). Not
changing to type DOCK yet as it breaks some WMs.

25-Aug-2004
~~~~~~~~~~~
Use new GTK 2.2 functions to set window hints now that we don't support 2.0
anymore (Guido Schimmels).

23-Aug-2004
~~~~~~~~~~~
Plug a memory leak when loading SVG type icons (Stephen Watson).

18-Aug-2004
~~~~~~~~~~~