@@ -28,6 +28,9 @@ changing directory.
 
 			FEATURES FOR 2.1
 
+Windows should include the toolbar size when autosizing, but still allow the
+window to be resized smaller. Remove the current option.
+
 Going Up in List View loses the focus and scroll position.
 
 Better errors from SOAP messages.
