@@ -2,6 +2,10 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+29-Sep-2004
+~~~~~~~~~~~
+Force panel to not take focus when using GTK 2.4 (Thomas Leonard).
+
 28-Sep-2004
 ~~~~~~~~~~~
 Minimum width of toolbar now an option (requested by Matthew Weier O'Phinney).
